[jan06-2] db context & entitys, new init.sql

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Port=4002;Database=aspnet1;User=user;Password=user_password"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
